--- a/Gruppo 24/.classpath
+++ b/Gruppo 24/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="C:/Users/hp/Downloads/prog-4ed.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Cosimo/Downloads/Gruppo-24-master.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
