--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/gson-2.8.2"/>
-	<classpathentry kind="output" path="out/production/untitled"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
